@@ -14,6 +14,10 @@
  *
  *  <b>Non-USB Library Components</b>
  *    - The ADC_Off() function has been renamed to \ref ADC_ShutDown() to be consistent with the rest of the library.
+ *    - The Dataflash_Init() routine no longer initializes the SPI bus - the SPI bus should be initialized manually via a
+ *      call to SPI_Init() before using the Dataflash driver
+ *    - The SPI_Init() routine's parameters have changed, so that the clock polarity and data sampling modes can be set. See
+ *      the SPI_Init() function documentation for more details
  *
  * \section Sec_Migration090810 Migrating from 090605 to 090810
  *
